# curler-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: format-python.sh  valida-comando.sh
.cursor/rules/: changelog.mdc  cli-repl.mdc  curler-core.mdc  fetcher.mdc  formatter.mdc  url.mdc
.cursor/skills/comando-repl/: SKILL.md
.cursor/skills/nova-flag-cli/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
curler/: __init__.py  cli.py  fetcher.py  formatter.py  history.py  parser.py  renderer.py  repl.py  style.py  url.py
docs/: curler-guide.md
docs/decisoes/: 0001-curl-subprocess.md  0002-sem-headless.md
landing/: app.js  index.html  style.css
tests/: test_cli.py  test_fetcher.py  test_formatter.py  test_history.py  test_integration.py  test_parser.py  test_renderer.py  test_repl.py  test_style.py  test_url.py
tests/fixtures/: html_samples.py
