[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curler-manuscript"
version = "0.1.0"
description = "A curl-backed CLI browser that shows the raw web."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Curler contributors" }
]
dependencies = []
dev = ["pre-commit","ruff", "build"]

[project.scripts]
curler = "curler.cli:main"

[tool.setuptools.packages.find]
include = ["curler*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
