[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curler-paperback"
version = "0.2.2"
description = "A curl-backed CLI browser that parses HTML into readable pages."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Curler contributors" }
]
license = "MIT"
dependencies = ["beautifulsoup4", "lxml"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "build", "git-cliff"]

[project.scripts]
curler = "curler.cli:main"

[tool.setuptools.packages.find]
include = ["curler*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
